--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="screen.css" media="screen" rel="stylesheet" type="text/css">
-		<title>YOUR NAME</title>
+		<title>Pengra's Portfolio</title>
 	</head>
 	<body class="index">
 		<div id="content">
-			<h1>Your Name</h1>
+			<h1>Joshua {Pengra</h1>
 			<p>One sentence about what this is.</p>
 		</div><!--content DIV-->
 	</body>
