--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	</head>
 	<body class="index">
 		<div id="content">
-			<h1>Joshua {Pengra</h1>
-			<p>One sentence about what this is.</p>
+			<h1>JoshuaPengra</h1>	
+			<p>This Webpage is my Personal Portfolio</p>
 		</div><!--content DIV-->
 	</body>
 </html>
